modulo-04-gestion-apps-redes/ejercicios/guiado/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mi-nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: mi-nginx.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mi-nginx
                port:
                  number: 80
